--- a/app/src/main/res/drawable/ic_back_arrow.xml
+++ b/app/src/main/res/drawable/ic_back_arrow.xml
@@ -1,5 +1,4 @@
-<vector android:height="36dp" android:tint="@color/colorLight"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="36dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+<vector  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="36dp" android:width="36dp" android:viewportHeight="24.0" android:viewportWidth="24.0" android:tint="@color/colorLight">
+    <path android:fillColor="#FF000000" android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z" />
 </vector>
