--- a/app/src/main/res/drawable/ic_dropdown_arrow.xml
+++ b/app/src/main/res/drawable/ic_dropdown_arrow.xml
@@ -1,4 +1,4 @@
-<vector android:height="48dp" android:viewportHeight="24.0"
-    android:viewportWidth="24.0" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M7,10l5,5 5,-5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="48dp" android:width="48dp" android:viewportHeight="24.0" android:viewportWidth="24.0">
+    <path android:fillColor="#FF000000" android:pathData="M7,10l5,5 5,-5z" />
 </vector>
