--- a/app/src/main/res/drawable/ic_filter_arrow.xml
+++ b/app/src/main/res/drawable/ic_filter_arrow.xml
@@ -1,4 +1,4 @@
-<vector android:height="48dp" android:viewportHeight="24.0"
-    android:viewportWidth="24.0" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/colorLight" android:pathData="M10,18h4v-2h-4v2zM3,6v2h18L21,6L3,6zM6,13h12v-2L6,11v2z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="48dp" android:width="48dp" android:viewportHeight="24.0" android:viewportWidth="24.0">
+    <path android:fillColor="@color/colorLight" android:pathData="M10,18h4v-2h-4v2zM3,6v2h18L21,6L3,6zM6,13h12v-2L6,11v2z" />
 </vector>
