--- a/app/src/main/res/drawable/ic_indicator_backward.xml
+++ b/app/src/main/res/drawable/ic_indicator_backward.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-  android:height="60dp" android:viewportHeight="24.0" android:width="60dp" android:viewportWidth="24.0">
+    android:height="60dp" android:width="60dp" android:viewportHeight="24.0" android:viewportWidth="24.0">
     <group>
         <path android:strokeColor="@color/colorAccent" android:strokeWidth="3.5"
-            android:pathData="M22,2 L4.5,12 L22,22 "/>
+            android:pathData="M22,2 L4.5,12 L22,22" />
         <path android:strokeWidth="1" android:strokeColor="@color/colorLight"
             android:pathData="M21.2,0.4 L0.75,11.75 L21.2,23.6 L22.8,20.2 L8.5,12 L22.8,3.8z" />
     </group>
