--- a/app/src/main/res/layout/custom_spinner_dropdown.xml
+++ b/app/src/main/res/layout/custom_spinner_dropdown.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingStart="10dp"
     android:text="@string/default_spinner_message"
     android:textColor="@color/colorPrimary"
