--- a/app/src/main/res/layout/item_selected_filter.xml
+++ b/app/src/main/res/layout/item_selected_filter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/filter_tag"
@@ -24,6 +25,6 @@
       android:text="@string/default_filter_name"
       android:textSize="12sp"
       android:textStyle="bold"
-      android:textColor="@color/darkMode"/>
+      android:textColor="@color/darkMode" />
 
 </LinearLayout>
