--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,16 +22,17 @@
 
   <TextView
       android:id="@+id/sorryTextView"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:paddingHorizontal="15dp"
+      android:layout_marginHorizontal="15dp"
+      android:paddingVertical="20dp"
       android:text="@string/precautions_sorry_message"
       android:textSize="22sp"
       android:textStyle="bold"
       android:textAlignment="center"
       android:gravity="center"
       android:alpha="0.8"
-      android:visibility="gone"
+      android:visibility="invisible"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
