--- a/app/src/main/res/layout/item_precaution.xml
+++ b/app/src/main/res/layout/item_precaution.xml
@@ -13,7 +13,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:background="@color/colorLight"
+        android:background="@drawable/underlined_rect_colored"
         android:padding="10dp"
         android:elevation="2dp"
         app:layout_constraintTop_toTopOf="parent"
