--- a/app/src/main/res/layout/fragment_report_list.xml
+++ b/app/src/main/res/layout/fragment_report_list.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,11 +18,12 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-      <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/selectedFilterRV"
+      <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/sorterFilterComposeView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        tools:composableName="edu.usc.nlcaceres.infectionprevention.composables.listItems.SelectedFilterKt.SelectedFilterPreview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,7 +51,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/selectedFilterRV"
+        app:layout_constraintTop_toBottomOf="@+id/sorterFilterComposeView"
         app:layout_constraintBottom_toBottomOf="parent" />
 
       <!-- Much better than button, imageview, textview combo -->
