Fix FragmentSettings navigation via the Settings icon menu item
- Adding a "menuCategory" to the icon prevents the Navigation Component
from completely popping the Navigation backstack, which causes unexpected
navigation, e.g. FragmentSortFilter to Settings and all the way back to
FragmentMain, instead of FragmentSortFilter

--- a/app/src/main/res/menu/action_buttons.xml
+++ b/app/src/main/res/menu/action_buttons.xml
@@ -6,6 +6,8 @@
         android:id="@+id/globalActionToFragmentSettings"
         android:icon="@drawable/ic_settings"
         android:title="@string/action_settings"
+        android:menuCategory="system"
         app:showAsAction="ifRoom" />
-
+    <!-- Menu items NEED a menuCategory OR else the Navigation Component will pop its -->
+    <!-- Back stack ALL THE WAY TO THE STARTING FRAGMENT instead of the most recent fragment -->
 </menu>
